force-app/main/default/objects/Job_Landing__c/Job_Landing__c.object-meta.xml
<CustomObject>
    <label>Job Landing</label>
    <nameField>
        <label>Job Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Landings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>