force-app/main/default/objects/Job_Landing__c/fields/Company_Description__c.field-meta.xml
<CustomField>
    <fullName>Company_Description__c</fullName>
    <label>Company Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>