force-app/main/default/objects/Job_Landing__c/fields/company_logo__c.field-meta.xml
<CustomField>
    <fullName>company_logo__c</fullName>
    <label>Company Logo</label>
    <type>Url</type>
</CustomField>