force-app/main/default/objects/Job_Landing__c/fields/Company_URL__c.field-meta.xml
<CustomField>
    <fullName>Company_URL__c</fullName>
    <label>Company URL</label>
    <type>Url</type>
</CustomField>