force-app/main/default/objects/Job_Landing__c/fields/company_website__c.field-meta.xml
<CustomField>
    <fullName>company_website__c</fullName>
    <label>Company Website</label>
    <type>Url</type>
</CustomField>