force-app/main/default/objects/Job_Landing__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Salary</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>