force-app/main/default/objects/Job_Landing__c/fields/Employer_Size__c.field-meta.xml
<CustomField>
    <fullName>Employer_Size__c</fullName>
    <label>Employer Size</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>