force-app/main/default/objects/Job_Landing__c/fields/Job_Location__c.field-meta.xml
<CustomField>
    <fullName>Job_Location__c</fullName>
    <label>Job Location</label>
    <type>Address</type>
</CustomField>