force-app/main/default/objects/Job_Landing__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <label>Delete field Job Title</label>
    <type>TextArea</type>
</CustomField>