force-app/main/default/objects/Job_Landing__c/fields/Job_URL__c.field-meta.xml
<CustomField>
    <fullName>Job_URL__c</fullName>
    <label>Job URL</label>
    <type>Url</type>
</CustomField>